fix: image on main article not showing

--- a/components/Articles/ArticleHighlight/articlehighlight.module.scss
+++ b/components/Articles/ArticleHighlight/articlehighlight.module.scss
@@ -68,9 +68,11 @@
 .containerImage {
   position: relative;
   width: 100%;
-  min-height: 100%;
+  min-height: 220px;
+
   img {
     border-radius: 6px;
+    height: 100%;
   }
 }
 
@@ -91,5 +93,11 @@
     min-height: 300px;
     margin-bottom: 30px;
     order: 1;
+  }
+}
+
+@media screen and (max-width: $breaking-point-md) {
+  .containerImage {
+    margin-bottom: 15px;
   }
 }
